tests/paczka1/fuzzy1/89960473.err
Error in line 4: S37 S359 92,2
Error in line 7: S37 S37 21,0
Error in line 15: S37 S565 68,6
